--- a/detaljeView.html
+++ b/detaljeView.html
@@ -99,11 +99,15 @@
 
         #detalje_button {
             position: fixed;
-            top: 0;
-            left: 0;
-            font-size: 4rem;
+            left: 2px;
+            top: 20px;
+            font-size: 2rem;
             cursor: pointer;
-            margin: 1em;
+            border: none;
+            padding: 0;
+            background: transparent;
+            color: white;
+            z-index: 1;
         }
 
 
@@ -111,11 +115,14 @@
 
         #next_button {
             position: fixed;
-            top: 0;
-            right: 0;
-            font-size: 4rem;
+            right: 2px;
+            top: 20px;
+            font-size: 2rem;
             cursor: pointer;
-            margin: 1em;
+            border: none;
+            padding: 0;
+            background: transparent;
+            color: white;
         }
 
         #skrifttyperPop {
@@ -151,7 +158,7 @@
 
         #h1pop {
             background-color: rgb(10, 192, 247);
-            padding: 120px 0 50px 0;
+            padding: 170px 0 100px 0;
             margin: 0;
             color: white;
             text-align: center;
@@ -189,7 +196,11 @@
 
 
         .logo {
+            display: block;
             cursor: pointer;
+            margin: 0 auto;
+
+
         }
 
         header {
@@ -199,9 +210,7 @@
 
         nav {
             background-color: #242A31;
-            display: grid;
-            grid-template-columns: 100px 1fr;
-            grid-template-rows: 1fr;
+
             font-family: audrey;
             font-size: 1.1rem;
 
@@ -209,21 +218,13 @@
 
         }
 
-        .list_wrapper {
-            display: flex;
-            justify-content: center;
-            margin: 0;
-            grid-row: 1;
-            grid-column: 1/3;
-            align-self: center;
-            padding: 30px 0 30px 0;
 
-        }
 
 
 
         li {
             cursor: pointer;
+            display: none;
 
         }
 
@@ -231,78 +232,21 @@
             list-style-type: none;
             padding: 0;
             color: white;
+
         }
 
         .headings ul {}
 
-        .headings {
-            padding-right: 20px;
-        }
 
-        .body_texts {}
-
-        .all {
-            padding-right: 20px;
-        }
-
-        .dropdown_content li {
-            padding: 10px;
-            /*
-            border: 1px solid white;
-            border-radius: 5px;
-*/
-            margin-bottom: 10px;
-
-
-
-
-        }
-
-        .dropdown_content:nth-child(1) {
-            padding-top: 25px;
-        }
-
-
-
-
-
-
-        .dropdown_content {
-            display: none;
-            /*            position: absolute;*/
-            /*                background-color: #242A31;*/
-
-            z-index: 1;
-            margin: 0;
-            border-radius: 10px;
-        }
-
-        .dropdown_content a {
-            /*                padding: 0;*/
-
-        }
-
-        .headings:hover .dropdown_content {
-            display: flex;
-
-
-            flex-direction: column;
-
-        }
-
-        .body_texts:hover .dropdown_content {
-            display: flex;
-            flex-direction: column;
-        }
 
 
 
         .logo {
-            display: none;
+
             width: 100px;
             height: 75px;
             grid-row: 1;
-            grid-column: 1;
+            grid-column: 2/4;
             padding: 5px;
         }
 
@@ -315,9 +259,43 @@
                 margin: 0px 100px;
             }
 
+            #h1pop {
+
+                font-size: 3.5rem;
+
+            }
+
             header {
                 position: fixed;
                 width: calc(100% - 200px);
+            }
+
+            .logo {
+                display: block;
+            }
+
+            #detalje_button {
+                position: fixed;
+                left: 102px;
+                font-size: 2rem;
+                cursor: pointer;
+                border: none;
+                padding: 0;
+                background: transparent;
+                color: white;
+                z-index: 1;
+            }
+
+            #next_button {
+                position: fixed;
+                right: 102px;
+
+                font-size: 2rem;
+                cursor: pointer;
+                border: none;
+                padding: 0;
+                background: transparent;
+                color: white;
             }
 
             .imgPop {
@@ -342,9 +320,7 @@
 
             nav {
                 background-color: #242A31;
-                display: grid;
-                grid-template-columns: 100px 1fr;
-                grid-template-rows: 1fr;
+
                 font-family: audrey;
                 font-size: 1.1rem;
             }
@@ -389,12 +365,44 @@
 
             }
 
+            li {}
+
         }
 
         @media screen and (min-width:930px) {
 
             body {
                 margin: 0px 150px;
+            }
+
+            #h1pop {
+
+                font-size: 4rem;
+
+            }
+
+            #detalje_button {
+                position: fixed;
+                left: 252px;
+                font-size: 2rem;
+                cursor: pointer;
+                border: none;
+                padding: 0;
+                background: transparent;
+                color: white;
+                z-index: 1;
+            }
+
+            #next_button {
+                position: fixed;
+                right: 152px;
+
+                font-size: 2rem;
+                cursor: pointer;
+                border: none;
+                padding: 0;
+                background: transparent;
+                color: white;
             }
 
             .imgPop {
@@ -427,6 +435,36 @@
 
             body {
                 margin: 0px 200px;
+            }
+
+            #h1pop {
+
+                font-size: 4.5rem;
+
+            }
+
+            #detalje_button {
+                position: fixed;
+                left: 202px;
+                font-size: 2rem;
+                cursor: pointer;
+                border: none;
+                padding: 0;
+                background: transparent;
+                color: white;
+                z-index: 1;
+            }
+
+            #next_button {
+                position: fixed;
+                right: 202px;
+
+                font-size: 2rem;
+                cursor: pointer;
+                border: none;
+                padding: 0;
+                background: transparent;
+                color: white;
             }
 
             .imgPop {
@@ -463,6 +501,36 @@
                 margin: 0px 200px;
             }
 
+            #h1pop {
+
+                font-size: 5rem;
+
+            }
+
+            #detalje_button {
+                position: fixed;
+                left: 202px;
+                font-size: 2rem;
+                cursor: pointer;
+                border: none;
+                padding: 0;
+                background: transparent;
+                color: white;
+                z-index: 1;
+            }
+
+            #next_button {
+                position: fixed;
+                right: 202px;
+
+                font-size: 2rem;
+                cursor: pointer;
+                border: none;
+                padding: 0;
+                background: transparent;
+                color: white;
+            }
+
             .imgPop {
                 padding: 100px 200px;
             }
@@ -497,6 +565,36 @@
 
             body {
                 margin: 0px 200px;
+            }
+
+            #h1pop {
+
+                font-size: 6rem;
+
+            }
+
+            #detalje_button {
+                position: fixed;
+                left: 202px;
+                font-size: 2rem;
+                cursor: pointer;
+                border: none;
+                padding: 0;
+                background: transparent;
+                color: white;
+                z-index: 1;
+            }
+
+            #next_button {
+                position: fixed;
+                right: 202px;
+
+                font-size: 2rem;
+                cursor: pointer;
+                border: none;
+                padding: 0;
+                background: transparent;
+                color: white;
             }
 
             .imgPop {
