--- a/detaljeView.html
+++ b/detaljeView.html
@@ -197,7 +197,7 @@
         }
 
         .numbers_billede {
-            background-color: #0CB1F2;
+            background-color: rgb(10, 192, 247);
             padding: 33px;
         }
 
@@ -629,7 +629,6 @@
 
 
         }
-
     </style>
 </head>
 
@@ -637,7 +636,7 @@
 
     <header>
         <nav>
-            <img class="logo" src="img/Logo.svg">
+            <a href="index.html"> <img class="logo" src="img/Logo.svg"></a>
 
             <ul class="list_wrapper">
 
@@ -772,8 +771,5 @@
             visSkrifttyper();
             //     document.querySelector(".skrifttyper_kategori").textContent = this.textContent;
         }
-
     </script>
-</body>
-
-</html>
+</body></html>
