--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <header>
             <nav>
-                <img class="logo" src="img/Logo.svg">
+                <a href="index.html"> <img class="logo" src="img/Logo.svg"> </a>
 
                 <ul class="list_wrapper">
 
