--- a/index.html
+++ b/index.html
@@ -94,8 +94,24 @@
                 <p></p>
             </article>
         </section>
+
+        <footer>
+            <div class="sectionwrapper">
+                <div class="col">
+                    <h2>AUTHORS</h2>
+                    <p>Andrea Valgeirsdottir, Jeppe Andersen og Josefine Cecilie Lumbye Larsen</p>
+
+
+                </div>
+                <div class="col">
+                    <h2>CONTACT</h2>
+                    <p>Phone: +45 42 32 63 24 Mail:<a href="mailto:andr60c0@stud.kea.dk">andr60c0(at)stud.kea.dk</a></p>
+
+
+                </div>
+            </div>
+
+        </footer>
     </div>
     <script src="script.js"></script>
-</body>
-
-</html>
+</body></html>
