--- a/detaljeView.html
+++ b/detaljeView.html
@@ -13,6 +13,45 @@
             margin: 0;
         }
 
+        footer {
+            background-color: #242A31;
+            font-family: aileron;
+            font-size: .8rem;
+            width: 100%;
+            bottom: 0;
+            color: white;
+
+            margin: 0 auto;
+
+        }
+
+        footer .col {
+            flex-grow: 1;
+            flex-basis: 300px;
+        }
+
+        footer .sectionwrapper {
+
+
+            display: flex;
+            flex-wrap: wrap;
+
+            flex-direction: row;
+            justify-content: space-around;
+            padding-left: 30px;
+
+        }
+
+        footer p {
+            font-size: .8rem;
+
+        }
+
+        footer a {
+            text-decoration: none;
+            color: white;
+        }
+
         .roboto {
             font-family: 'Roboto Slab';
             font-weight: 100;
@@ -686,7 +725,23 @@
             </div>
         </article>
     </section>
+    <footer>
+        <div class="sectionwrapper">
+            <div class="col">
+                <h2>AUTHORS</h2>
+                <p>Andrea Valgeirsdottir, Jeppe Andersen og Josefine Cecilie Lumbye Larsen</p>
 
+
+            </div>
+            <div class="col">
+                <h2>CONTACT</h2>
+                <p>Phone: +45 42 32 63 24 Mail:<a href="mailto:andr60c0@stud.kea.dk">andr60c0(at)stud.kea.dk</a></p>
+
+
+            </div>
+        </div>
+
+    </footer>
 
 
     <script>
