--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i|Raleway:300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -85,7 +86,7 @@
             </article>
         </template>
 
-<!--
+        <!--
         <section id="detalje" class="">
             <article id="detaljeView">
                 <button id="detalje_button">X</button>
