--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                 </div>
 
                 <h3 id="navn"></h3>
-                <p id="classic"></p>
+                <p id="classic"><strong>Classification: </strong><span></span></p>
 
-                <p id="style"></p>
+                <p id="style"><strong>Font Styles: </strong><span></span></p>
 
             </article>
         </template>
