sitedone done done

--- a/detaljeView.html
+++ b/detaljeView.html
@@ -188,6 +188,8 @@
             font-weight: 100;
             margin: 0;
             font-size: 1.4rem;
+            font-style: thin;
+
 
 
 
@@ -487,6 +489,8 @@
 
             }
 
+
+
             #detalje_button {
                 position: fixed;
                 left: 202px;
@@ -584,7 +588,6 @@
                 background-color: #242A31;
                 padding: 100px 200px;
                 margin: 0;
-
             }
 
             .shortTextBox {
@@ -715,6 +718,7 @@
             <div class="imgPop">
                 <img src="" alt="">
             </div>
+
             <p class="longTextBox"></p>
             <p class="shortTextBox"></p>
             <div class="characterset_billede">
