--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
                     <li class="headings">HEADINGS
                         <ul class="dropdown_content">
 
-                            <li class="filter valgt" data-kategori="alleO">ALL</li>
-                            <li class="filter" data-kategori="sans-serif">SANS-SERIFS</li>
-                            <li class="filter" data-kategori="serif">SERIFS</li>
+                            <li class="filter valgt" data-kategori="alleO">All</li>
+                            <li class="filter" data-kategori="sans-serif">Sans-serifs</li>
+                            <li class="filter" data-kategori="serif">Serifs</li>
 
                         </ul>
                     </li> <span class="span_right"></span>
                     <li class="body_texts">BODY TEXTS
                         <ul class="dropdown_content">
 
-                            <li class="filter valgt" data-kategori="alleB">ALL</li>
-                            <li class="filter" data-kategori="sans-serif">SANS-SERIFS</li>
-                            <li class="filter" data-kategori="serif">SERIFS</li>
+                            <li class="filter valgt" data-kategori="alleB">All</li>
+                            <li class="filter" data-kategori="sans-serif">Sans-serifs</li>
+                            <li class="filter" data-kategori="serif">Serifs</li>
 
                         </ul>
                     </li>
@@ -79,9 +79,9 @@
                 </div>
 
                 <h3 id="navn"></h3>
-                <p id="classic"><strong>Classification: </strong><span></span></p>
+                <p class="classic"><strong>Classification: </strong><span></span></p>
 
-                <p id="style"><strong>Font Styles: </strong><span></span></p>
+                <p class="style"><strong>Font Styles: </strong><span></span></p>
 
             </article>
         </template>
